<resources>
    <string name="app_name">CarKier</string>
    <string name="abierto">a</string>
    <string name="cerrado">b</string>

    <string name="iniciosesion_correo">Correo</string>
    <string name="iniciosesion_contra">Contraseña</string>
    <string name="iniciosesion_btn_inicio">Inicio Sesion</string>
    <string name="iniciosesion_recordar">Recordar inicio Sesion</string>
    <string name="iniciosesion_olvidecontra">Olvide mi contraseña</string>
    <string name="iniciosesion_crearcuenta">Crear Cuenta</string>

    <string name="crearcuenta_dni">DNI:</string>
    <string name="crearcuenta_nombre">Nombre:</string>
    <string name="crearcuenta_apellido">Apellidos:</string>
    <string name="crearcuenta_fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="crearcuenta_seguiente">Siguiente</string>

    <string name="crearcuenta2_telefono">telefono:</string>
    <string name="crearcuenta2_correo">Correo:</string>
    <string name="crearcuenta2_contra">Contraseña:</string>
    <string name="crearcuenta2_crearcuenta">Crear Cuenta</string>

    <string name="crearcarnet_tipo">Tipo:</string>
    <string name="crearcarnet_fechaexpedicion">Fecha Expedicion:</string>
    <string name="crearcarnet_crearcarnet">Crear Carnet</string>

    <string name="olvidecontra_descripcion">Introduce tu correo.</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="principal_menu_home">Home</string>
    <string name="principa_menu_buscar">pincipla</string>
    <string name="principal_menu_perfil">pincipal</string>
    <string name="necesitas_actualizar_esta_caducado">Necesitas Actualizar esta caducado</string>
    <string name="imagen_carnet">Imagen carnet</string>
    <string name="Carnet_usuario">Usuario:</string>
    <string name="carnet_tipo">Tipo:</string>
    <string name="carnet_fecha_expedicion">Fecha Expedicion:</string>
    <string name="carnet_fecha_caducided">Fecha Caducided:</string>
    <string name="Mostrar_contrtar_servicios">Contratar Servicios</string>
    <string name="Mostrar_precio_venta">Precio Venta:</string>
    <string name="modificar">Modificar</string>
    <string name="carnetsMenu">Carnets</string>
    <string name="contratosNav">Tus Contratos</string>
    <string name="mode_noche">Mode noche</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="tel_fono_123_456_789">Teléfono: 637 65 02 50</string>
    <string name="correo_ejemplo_email_com">Correo: carkier@email.com</string>
    <string name="contacto">Contacto</string>
</resources>