<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/iti"
        android:checkableBehavior="single">
        <item android:id="@+id/carnet"
            android:title="@string/carnetsMenu"
            android:icon="@drawable/carnet"/>

        <item android:id="@+id/contrato"
            android:title="@string/contratosNav"
            android:icon="@drawable/contrato"/>

        <item android:id="@+id/modoNocturno"
            android:title="@string/mode_noche"
            android:icon="@drawable/noche"/>

        <item android:id="@+id/CerrarSesion"
            android:title="@string/cerrar_sesion"
            android:icon="@drawable/ajustes"/>

    </group>

    <!-- Sección de contacto -->
    <group android:id="@+id/contactoGroup" android:checkableBehavior="none">

        <item
            android:id="@+id/tituloContacto"
            android:title="@string/contacto" />

        <item
            android:id="@+id/contactoTelefono"
            android:title="@string/tel_fono_123_456_789" />

        <item
            android:id="@+id/contactoCorreo"
            android:title="@string/correo_ejemplo_email_com"/>

    </group>

</menu>